# Octopus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-push.yml  github-release.yml  linter-formatter.yml
artifact/: LICENSE  README.md
artifact/our_results/: 1_Table_1_Octopus_averages.txt  3_public_code_statistics.txt
case_studies/: basic.p4  complex-naive.p4  simple.p4
examples/: basic.p4  framework.txt
incorrect_cases/simple/: simple_4.p4
src/automata/: dfa.py
src/automaton/: DFA.py
src/bisimulation/: bisimulation.py  constraint.py  formula.py
src/bisimulation/symbolic/: formula.py
src/kangaroo/: __about__.py  bit_vector.py  main.py
src/leapedfrog/: __about__.py  bit_vector.py  constants.py  main.py  utils.py
src/octopus/: __about__.py  bit_vector.py  constants.py  main.py  utils.py
src/parser/: Component.py  Parser.py  ParserState.py  SelectExpression.py  Slice.py
src/parser_program/: ParserProgram.py  ParserState.py  SelectExpression.py  Slice.py
src/program/: component.py  expression.py  operation_block.py  parser_program.py  parser_state.py  transition_block.py
tests/: basic.p4  framework_template.txt  plotter.py  programs-survey-exp.py  public-code-exp.py  runner.py
tests/case_studies/: basic.p4
tests/correct_cases/: basic-naive.p4  basic.p4  hello-octopus.p4  implicit_reject.p4  unconditional_accept.p4
tests/correct_cases/extended_syntax/: mpls_extended.p4
tests/edge/: compiled.p4
tests/incorrect_cases/: infinite.p4  infinite_lookahead.p4  infinite_no_accept_reject.p4
tests/incorrect_cases/mpls/: mpls.p4  mpls_vectorised.p4
tests/leapfrog_benchmarks/datacenter/: switch.p4
tests/leapfrog_benchmarks/edge/: optimised.p4  plain.p4
tests/leapfrog_benchmarks/enterprise/: router.p4
tests/leapfrog_benchmarks/external_filtering/: sloppy.p4  strict.p4
tests/leapfrog_benchmarks/header_initialisation/: correct.p4  incorrect.p4  read_initialised.p4  read_uninitialised.p4
tests/leapfrog_benchmarks/mpls/: mpls.p4  mpls_vectorised.p4
tests/leapfrog_benchmarks/service_provider/: core_router.p4  optimised.p4  plain.p4
tests/leapfrog_benchmarks/speculative_extraction/: mpls.p4  mpls_vectorised.p4
tests/leapfrog_benchmarks/state_rearrangement/: combined_states.p4  separate_states.p4  seperate_states.p4
tests/leapfrog_benchmarks/variable_length_formats/: ipoptions.p4  timestamp.p4
tests/leapfrog_benchmarks/variable_length_formats_2/: ipoptions.p4  timestamp.p4
tests/leapfrog_benchmarks/variable_length_formats_3/: ipoptions.p4  timestamp.p4
tests/p4-programs-survey/: arp.p4  beamer_16.p4  dc.p4  ecmp.p4  flowlet.p4  hula.p4  hyper4.p4  hyperv.p4  ipv4_forward.p4  linearroad_16.p4  mc_nat_16.p4  mri.p4  ndp_router_16.p4  netcache_16.p4  netchain_16.p4  netpaxos_combined_16.p4  rohc_compression_p4_16.p4  scrambler.p4  sketchlearn.p4  sonata.p4  source_routing.p4  speedlight.p4  stag.p4  vss.p4
tests/unit_tests/: test_extend_buffer.py
tests/whippersnapper/parse-complex/: 2-2.p4  2-4.p4  2-6.p4  3-1-no-intermediate.p4  3-1.p4  3-3.p4  3-4.p4  4-2.p4  4-3.p4  4-4.p4  6-2.p4
tests/whippersnapper/parse-field/: 1.p4  16.p4  4.p4  64.p4
tests/whippersnapper/parse-header/: 1-64.p4  1-98.p4  4-16.p4  4-32.p4  4-4.p4
