[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leapedfrog"
dynamic = ["version"]
description = "An equivalence checker for P4 packet parsers"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jort van Leenen", email = "jort@vleenen.nl" },
]
maintainers = [
    { name = "Jort van Leenen", email = "jort@vleenen.nl" },
]
keywords = ["p4", "parser", "equivalence", "checker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "pySMT ~= 0.9.6",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.11.9",
]

[project.urls]
"source" = "https://github.com/jortvanleenen/LeapedFrog"
"release notes" = "https://github.com/jortvanleenen/LeapedFrog/releases"

[project.scripts]
leapedfrog = "leapedfrog.main:main"

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/leapedfrog"]

[tool.hatch.version]
path = "src/leapedfrog/__about__.py"

[tool.ruff]
target-version = "py313"
