[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octopus"
dynamic = ["version"]
description = "An equivalence checker for P4 packet parsers"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Jort van Leenen", email = "jort@vleenen.nl" },
]
maintainers = [
    { name = "Jort van Leenen", email = "jort@vleenen.nl" },
]
keywords = ["p4", "parser", "equivalence", "checker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "pySMT ~= 0.9.6",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.11.9",
    "tqdm ~= 4.67.1",
    "pre-commit ~= 4.2.0",
]

[project.urls]
"source" = "https://github.com/jortvanleenen/Octopus"
"release notes" = "https://github.com/jortvanleenen/Octopus/releases"

[project.scripts]
octopus = "octopus.main:main"

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/octopus"]

[tool.hatch.version]
path = "src/octopus/__about__.py"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["I"]
